# yoink-packager

./: .TREE  .gitignore  CMakeLists.txt  INSTALL  Makefile  README  mirror  yoink  yoink-installer  yoink-pkgr
db/: yoink.db
etc/: INSTALL.sample
include/: csvreader.h  database.h  package.h  yoink.h  yoinkinstaller.h
src/: csvreader.cpp  database.cpp  package.cpp  yoink.cpp
src/yoink-installer/: CMakeLists.txt  yoinkinstaller.cpp
yoink/: Cargo.toml
yoink/src/: main.rs  test-123.tar
yoink/src/db/: db.rs
yoink/src/package/: package.rs
