[package]
name = "yoink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.4.0"
log = "0.4.0"
tar = "0.4"
structopt = "0.3.26"
flate2 = "1.0.25"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
sqlite = "0.30.4"
parse_duration = "2.1.1"
